# serializer version: 1
# name: test_nested_object_selectors
  dict({
    'selector': dict({
      'object': dict({
        'description_field': 'percentage',
        'fields': dict({
          'name': dict({
            'required': True,
            'selector': dict({
              'text': dict({
                'multiline': False,
                'multiple': False,
              }),
            }),
          }),
          'object': dict({
            'selector': dict({
              'selector': dict({
                'object': dict({
                  'description_field': 'other_name',
                  'fields': dict({
                    'new_object': dict({
                      'required': True,
                      'selector': dict({
                        'selector': dict({
                          'object': dict({
                            'description_field': 'description',
                            'fields': dict({
                              'description': dict({
                                'required': True,
                                'selector': dict({
                                  'text': dict({
                                    'multiline': False,
                                    'multiple': False,
                                  }),
                                }),
                              }),
                              'title': dict({
                                'required': True,
                                'selector': dict({
                                  'text': dict({
                                    'multiline': False,
                                    'multiple': False,
                                  }),
                                }),
                              }),
                            }),
                            'label_field': 'title',
                            'multiple': False,
                          }),
                        }),
                      }),
                    }),
                    'no_name': dict({
                      'required': True,
                      'selector': dict({
                        'text': dict({
                          'multiline': False,
                          'multiple': False,
                        }),
                      }),
                    }),
                    'other_name': dict({
                      'required': True,
                      'selector': dict({
                        'text': dict({
                          'multiline': False,
                          'multiple': False,
                        }),
                      }),
                    }),
                  }),
                  'label_field': 'no_name',
                  'multiple': False,
                }),
              }),
            }),
          }),
        }),
        'label_field': 'name',
        'multiple': True,
      }),
    }),
  })
# ---
# name: test_object_selector_uses_selectors
  dict({
    'selector': dict({
      'object': dict({
        'description_field': 'percentage',
        'fields': dict({
          'name': dict({
            'required': True,
            'selector': dict({
              'text': dict({
                'multiline': False,
                'multiple': False,
              }),
            }),
          }),
          'percentage': dict({
            'selector': dict({
              'number': dict({
                'max': 100.0,
                'min': 0.0,
                'mode': 'slider',
                'step': 1.0,
              }),
            }),
          }),
        }),
        'label_field': 'name',
        'multiple': True,
      }),
    }),
  })
# ---
